RESULTS/AutoSpec/raw_results/out-4o-NLA_lipus/18_0001/18_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/18_0001/18_merged.c:14:84: error: unterminated comment
   14 |     loop invariant x == \sum(0, c-1, i, (i+1)*(i+1)*(i+1)*(i+1)) /* Summation of i^4 */;
      |                                                                                    ^
